@@ -1,6 +1,8 @@
 Revision history for {{ $dist->name }}:
 
 {{$NEXT}}
+  [Documentation]
+  - Noted different meaning of "wo" attributes in Class::Accessor.
 
 v0.4.4    2020-07-31 14:44:28+01:00 Europe/London
   [Toolchain]
